{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 35,
  "lineage": "ad6e3dd3-4701-b0e2-7b99-cf5f474cfe0b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.111.73.143",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-30T01:08:09.466-07:00",
            "id": "projects/load-balancing-experiment/global/addresses/weather-app-ip",
            "name": "weather-app-ip",
            "prefix_length": 0,
            "project": "load-balancing-experiment",
            "self_link": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/addresses/weather-app-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/load-balancing-experiment/global/forwardingRules/weather-app-http-redirect-rule",
            "ip_address": "34.111.73.143",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "weather-app-http-redirect-rule",
            "port_range": "80-80",
            "project": "load-balancing-experiment",
            "self_link": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/forwardingRules/weather-app-http-redirect-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/targetHttpProxies/weather-app-http-redirect-proxy"
          },
          "dependencies": [
            "google_compute_global_address.default",
            "google_compute_target_http_proxy.http_redirect",
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/load-balancing-experiment/global/networks/weather-app-vpc",
            "mtu": 0,
            "name": "weather-app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "load-balancing-experiment",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/networks/weather-app-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-30T01:08:21.555-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/load-balancing-experiment/regions/us-central1/routers/weather-app-router",
            "name": "weather-app-router",
            "network": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/networks/weather-app-vpc",
            "project": "load-balancing-experiment",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/regions/us-central1/routers/weather-app-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "load-balancing-experiment/us-central1/weather-app-router/weather-app-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "weather-app-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "load-balancing-experiment",
            "region": "us-central1",
            "router": "weather-app-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-30T01:08:22.736-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/load-balancing-experiment/regions/us-central1/subnetworks/weather-app-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "weather-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/networks/weather-app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "load-balancing-experiment",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/regions/us-central1/subnetworks/weather-app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-30T01:08:21.007-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/load-balancing-experiment/global/targetHttpProxies/weather-app-http-redirect-proxy",
            "name": "weather-app-http-redirect-proxy",
            "project": "load-balancing-experiment",
            "proxy_bind": false,
            "proxy_id": 6230581150994482459,
            "self_link": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/targetHttpProxies/weather-app-http-redirect-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/urlMaps/weather-app-http-redirect"
          },
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-30T01:08:09.580-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "Zz7KkqIBMSQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/load-balancing-experiment/global/urlMaps/weather-app-http-redirect",
            "map_id": 1361783551116526854,
            "name": "weather-app-http-redirect",
            "path_matcher": [],
            "project": "load-balancing-experiment",
            "self_link": "https://www.googleapis.com/compute/v1/projects/load-balancing-experiment/global/urlMaps/weather-app-http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}